# shawarmaasaservice_bot

./: .gitignore  pyproject.toml
alembic_migrations/: alembic.ini.example  env.py
alembic_migrations/versions/: 2022-07-02_e89cab65ce19_init.py  2022-07-02_f4fc0e287165_order.py  2022-07-03_390b235b1276_order_taken.py  2022-07-03_703308338f63_options_id.py  2022-07-03_87be55b542ae_comment3.py  2022-07-03_94451e0fe22e_comment.py  2022-07-03_9c2d7f839905_comment2.py  2022-07-17_31f0b6bc6953_cascade.py  2022-07-17_35da919ac385_menu_pictures.py  2022-07-17_cb124d002ea3_reorder_order_entiry.py  2022-07-17_f991e133c447_chat.py  2022-08-04_ec5ffc6fcee4_deprecated_poll.py  2022-08-16_6f773ad31b59_money_message.py  2023-01-02_d7cc6c5443aa_chat_recognition.py  2023-01-02_e041af4ed8fa_admin_message.py  2023-01-03_0596c483776d_bonuses.py  (+7 more)
bot/: __main__.py  handlers.py  utils.py
common/: data.py  exception.py  session.py
core/: __main__.py  app.py  factory.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
lootbox/: data.js  lootbox.html  lootbox.js
shaas/: __main__.py  handlers.py  messages.py  storage.py  utils.py
shaas_bot/: __main__.py  job.py  utils.py
shaas_common/: billing.py  data.py  exception.py  notification.py  poll.py  security.py  session.py  settings.py  storage.py
shaas_old/: __main__.py  const.py  handlers.py  messages.py  utils.py
shaas_web/: __main__.py  app.py  bot.py  exceptions.py  factory.py  security.py  session.py
static/: cafe.css  cafe.js
templates/: admin.html  edit.html  index.html  list.html  menu.html
(+123 files in other folders)
