[tool.poetry]
name = "shawarmaasaservice_bot"
version = "0.1.0"
description = ""
authors = ["Vladimir Turov <firemoon@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.78.0"
sqlalchemy = "1.4.39"
asyncpg = "0.25.0"
uvicorn = "0.18.2"
python-telegram-bot = "20.0.0a0"
toml = "0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
